// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account render should render component 1`] = `
<div
  class="columns"
>
  <div
    class="column"
  >
    <p
      class="heading"
    >
      Ethereum Address
    </p>
     
    <p
      class="code address"
    >
      <img
        src=""
      />
       0x9999999999999999999999999999999999999999
    
    </p>
  </div>
   
  <div
    class="column"
  >
    <!---->
  </div>
</div>
`;

exports[`Account render should render props 1`] = `
<div
  class="columns"
>
  <div
    class="column"
  >
    <p
      class="heading"
    >
      Ethereum Address
    </p>
     
    <p
      class="code address"
    >
      <img
        src=""
      />
       0x9eceefdf3554e178a6549006f2c02163e63c9fd8
    
    </p>
  </div>
   
  <div
    class="column"
  >
    <!---->
  </div>
</div>
`;
